Stop mirroring from live -> dr and start mirroring dr -> live

--- a/base/mirror-maker2/mm2.yaml
+++ b/base/mirror-maker2/mm2.yaml
@@ -61,7 +61,7 @@ spec:
         # Interval period to refresh consumer groups statuses (Default: 600)
         refresh.groups.interval.seconds: 60
     topicsPattern: "my-topic"
-    topicsExcludePattern: ".*\\.internal, mirrormaker2.*, __.*"
+    topicsExcludePattern: ".*\\.internal, mirrormaker2-cluster-.*, __.*"
     groupsPattern: "app-group"
   resources:
     requests:
