Scale up to 1 MM2 replicas on live cluster and configure advertised.listeners of all kafkaclusters

--- a/overlays/dr/kafka-patch.yaml
+++ b/overlays/dr/kafka-patch.yaml
@@ -18,11 +18,11 @@ spec:
         authentication:
           type: scram-sha-512
         # Enable this conf when enable mirorring from dr -> live
-        # configuration:
-        #   brokers:
-        #   - broker: 0
-        #     advertisedHost: streams-cluster-kafka-mirroring-0.kafka-dr.svc.clusterset.local
-        #   - broker: 1
-        #     advertisedHost: streams-cluster-kafka-mirroring-1.kafka-dr.svc.clusterset.local
-        #   - broker: 2
-        #     advertisedHost: streams-cluster-kafka-mirroring-2.kafka-dr.svc.clusterset.local
+        configuration:
+          brokers:
+          - broker: 0
+            advertisedHost: streams-cluster-kafka-mirroring-0.kafka-dr.svc.clusterset.local
+          - broker: 1
+            advertisedHost: streams-cluster-kafka-mirroring-1.kafka-dr.svc.clusterset.local
+          - broker: 2
+            advertisedHost: streams-cluster-kafka-mirroring-2.kafka-dr.svc.clusterset.local
